tests/negative/test_decl_bad_id.orb
fnc main() () {
    let (x:i32 100);
    let (ret:u64 200);
};